--- a/Nuclear/NuclearData.ipynb
+++ b/Nuclear/NuclearData.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "source": [
+    "# Nuclear Calculations\n",
+    "\n",
+    "This notebook can be used for all types of nuclear calculations.  It uses the [AME2016](https://www-nds.iaea.org/amdc/) dataset for accurate mass values.\n",
+    "\n",
+    "## Getting started\n",
+    "\n",
+    "The first thing to do is to run the cell directly below this one to load the data from the server."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "small-embassy",
@@ -8,8 +21,47 @@
    "outputs": [],
    "source": [
     "from NuclearData import NuclearData\n",
-    "nd = NuclearData()"
+    "nd = NuclearData(accurate=False)"
    ]
+  },
+  {
+   "source": [
+    "Now that the data is in the notebook you can use it to perform calcuations.  I have used the physical constants in the [OCR Physics A databook](https://www.ocr.org.uk/Images/363796-units-h156-and-h556-data-formulae-and-relationships-booklet.pdf).  However, if you want to be super accurate you can rerun the cell above with the option:  \n",
+    "\n",
+    "```\n",
+    "nd = NuclearData(accurate=True)\n",
+    "```\n",
+    "\n",
+    "You can see the constants at any time by running the cell below."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "----------------------------------------------------\nQuantity                            Value         \n----------------------------------------------------\nAMU                                 1.661e-27     \nmass of electron /u                 5.486e-04     \nmass of proton / u                  1.0073        \nmass of neutron / u                 1.0087        \nspeed of light / m/s                3.00e+08      \nelectron charge / C                 1.60e-19      \namu to MeV                          931.494       \n----------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "nd.printConstants()"
+   ]
+  },
+  {
+   "source": [
+    "## Getting nuclear data\n",
+    "\n",
+    "To see the data for a particular atom just enter the A and Z values as in the next cell and press run. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -27,6 +79,13 @@
      ]
     }
    ]
+  },
+  {
+   "source": [
+    "You can show the binding energy per nucleon from the data set and the total binding energy."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -50,21 +109,37 @@
    ]
   },
   {
+   "source": [
+    "Here's some more data, this time for Thorium-228"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "----------------------------------------------------\nQuantity                            Value         \n----------------------------------------------------\nElement                             U             \nProton Number                       92            \nNucleon Number                      235           \nNeutron Number                      143           \nAtomic Mass / u                     235.04392819  \nNuclear Mass / u                    234.99346619  \nMass Defect / u                     1.87013381    \nBinding Energy / MeV                1747.28939536 \nBinding Energy per Nucleon / MeV    7.43527402    \n----------------------------------------------------\n"
+      "----------------------------------------------------\nQuantity                            Value         \n----------------------------------------------------\nElement                             Th            \nProton Number                       90            \nNucleon Number                      228           \nNeutron Number                      138           \nAtomic Mass / u                     228.02873984  \nNuclear Mass / u                    227.97936764  \nMass Defect / u                     1.87127145    \nBinding Energy / MeV                1743.07813493 \nBinding Energy per Nucleon / MeV    7.64507954    \n----------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "nd.printTable(A=235, Z=92)"
+    "nd.printTable(A=228, Z=90)"
    ]
+  },
+  {
+   "source": [
+    "## Nuclear decay energies\n",
+    "\n",
+    "You can also calculate alpha and beta decay energies.  Here's the energy released by the decay of Thorium-228 and Bismuth-210."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -75,24 +150,106 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Alpha KE (MeV) = 5.4397        \n"
+      "Energy Release (MeV) = -5.5202       \n"
      ]
     }
    ],
    "source": [
-    "nd.printAlphaEnergyMeV(A=228, Z=90)"
+    "nd.printAlphaEnergyReleaseMeV(A=228, Z=90)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Beta KE (MeV) =  1.1647        \n"
+      "Energy Release (MeV) = -1.1612       \n"
+     ]
+    }
+   ],
+   "source": [
+    "nd.printBetaEnergyReleaseMeV(A=210, Z=83)"
+   ]
+  },
+  {
+   "source": [
+    "It will calculate the alpha particle energy and speed too."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "nd.printAlphaEnergyMeV(A=228, Z=90)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 6,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alpha KE (MeV) = 5.4233        \n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alpha KE (J) = 8.6891e-13    \n"
+     ]
+    }
+   ],
+   "source": [
+    "nd.printAlphaEnergyJ(A=228, Z=90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alpha Speed (m/s) = 1.6172e+07    \n"
+     ]
+    }
+   ],
+   "source": [
+    "nd.printAlphaSpeed(A=228, Z=90)"
+   ]
+  },
+  {
+   "source": [
+    "For beta particles the speed has to be calculated from relativistic equations, so this might not be one to get pupils to do.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Beta KE (MeV) =  1.1612        \n"
      ]
     }
    ],
@@ -102,10 +259,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Beta Speed (m/s) =  2.8545e+08    \n"
+     ]
+    }
+   ],
+   "source": [
+    "nd.printBetaSpeed(A=210, Z=83)"
+   ]
+  },
+  {
+   "source": [
+    "I have not documented all of the functions but the source can be found [Here](https://github.com/martynwheeler/MartynsBinders/blob/main/Nuclear/NuclearData.py).  I will add some more documentation when I have time."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
