--- a/Nuclear/NuclearData.ipynb
+++ b/Nuclear/NuclearData.ipynb
@@ -51,7 +51,7 @@
         "nd = NuclearData(accurate=False)"
       ],
       "id": "small-embassy",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -74,13 +74,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "GjrcvE-IUvGv",
-        "outputId": "1beddd40-184a-4126-fea7-3e0d874e5125"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "923933c5-d0bc-4f76-f5f1-7862a44f97c2"
       },
       "source": [
         "nd.printConstants()"
       ],
       "id": "GjrcvE-IUvGv",
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
